--- a/packages/shared/styles/components/SfOverlay.scss
+++ b/packages/shared/styles/components/SfOverlay.scss
@@ -2,6 +2,7 @@
 
 $overlay__background-color: $c-black;
 $overlay__opacity: 0.8;
+$overlay__z-index: 1;
 
 .sf-overlay {
   position: fixed;
@@ -9,7 +10,7 @@ $overlay__opacity: 0.8;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: $overlay__z-index;
   background: $overlay__background-color;
   opacity: $overlay__opacity;
 }
